--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: objective-c  #1
 osx_image: xcode8.1 #2
-xcode_workspace: Example/MEVFloatingButton.xcworkspace #3
-xcode_scheme: MEVFloatingButton-Example #4
-xcode_sdk: iphonesimulator10.1 #5
+
+script:
+    - xcodebuild clean build -sdk iphonesimulator -workspace Example/MEVFloatingButton.xcworkspace -scheme MEVFloatingButton-Example CODE_SIGNING_REQUIRED=NO
+    
